Alignment fixed

--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,7 @@ i {
   color:#14c81a;
   size: 600%;
 }
-button {
+#slideshow > button {
   display:inline-block;
   background: #000;
   outline:0;
@@ -15,7 +15,7 @@ button {
   border:solid #000;
   border-width: 1px;
 }
-button:active, button:focus, button:hover {
+#slideshow > button:active,#slideshow > button:focus,#slideshow > button:hover {
   outline:0;
   outline-offset: 0;
   box-shadow: 0;
