--- a/css/contact.css
+++ b/css/contact.css
@@ -88,9 +88,9 @@ input:focus, textarea:focus {
 }
 /*Buttons*/
 #submit {
-  margin-left:38%;
   width:24%;
-  margin-top: 4vh;
+  height:2rem;
+  margin-top: 3vh;
   background-color: #000;
   box-shadow: 0;
   border:solid #14c81a;
